# nociones_clave2

./: CMakeLists.txt  README.md  main.cpp  main.h  persona.h
primera_parte/: estudiante.cpp  estudiante.h  main.cpp  persona.cpp
segunda_parte/: encabezado.cpp  encabezado.h  funciones.cpp  funciones.h  main2.cpp  matematicas.cpp  matematicas.h
